--- a/progresscircle/build.gradle
+++ b/progresscircle/build.gradle
@@ -1,5 +1,11 @@
 apply plugin: 'com.android.library'
 
+ext {
+    PUBLISH_GROUP_ID = 'com.tgd.android'
+    PUBLISH_ARTIFACT_ID = 'progress-circle'
+    PUBLISH_VERSION = '1.0'
+}
+
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
@@ -23,3 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
 }
+
+apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
